--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,10 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+      - name: set_env
+        run: echo 'GITHUB_API_TOKEN=${{ secrets.GITHUB_TOKEN }}' >> $GITHUB_ENV
+
       - name: asdf_plugin_test
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         uses: asdf-vm/actions/plugin-test@v1.0.0
         with:
           command: jira version
