--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,11 +13,14 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
+        
       - name: Run Shellcheck
         uses: azohra/shell-linter@latest
+        
   plugin_test:
     strategy:
       matrix:
