--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     paths-ignore:
       - "**.md"
-      - ".all-contributorsrc
+      - ".all-contributorsrc"
 
 jobs:
   lint:
